# SemanticCompressor

./: pyproject.toml  requirements.txt  setup.py
