[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_compressor"
version = "2.43"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "nltk",
    "scikit-learn",
    "lingua-language-detector",
    "model2vec",
    "pyspellchecker"
]
